syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.edu.sjtu.ist.ops";
option java_outer_classname = "HadoopOpsProto";
option objc_class_prefix = "OPS";

package hadoopops;

service HadoopOps {
    rpc Notify (HadoopMessage) returns (Empty) {}
}

message HadoopMessage {
    string taskId = 1;
    string jobId = 2;
    string ip = 3;
    string path = 4;
    string indexPath = 5;
}

message Empty {}
