syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.edu.sjtu.ist.ops";
option java_outer_classname = "OpsInternalProto";
option objc_class_prefix = "OPS";

package opsinternal;

service OpsInternal {
    rpc transfer (stream Chunk) returns (stream StatusMessage) {}
    rpc registerJob (stream JobMessage) returns (stream JobMessage) {}
    rpc distributeJob (stream JobMessage) returns (stream JobMessage) {}
    rpc OnTaskComplete (stream TaskMessage) returns (stream TaskMessage) {}
    rpc OnShuffle (stream ShuffleMessage) returns (stream ShuffleMessage) {}
}

message Chunk {
    string path = 1;
    bytes content = 2;
}

message StatusMessage {
    int32 status = 1;
}

message JobMessage {
    string jobConf = 1;
}

message TaskMessage {
    string taskConf = 1;
}

message ShuffleMessage {
    string taskConf = 1;
}